--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <div class="logo">
+                <img src="img/logo.png">
+            </div>
+            <ul> 
                 <li><a href="">Products</a></li>
-                <li class="brand"><a href="">DRIP MILK</a></li>
                 <li><a href="">About us</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
         </nav>
     </header>
