update halaman perusahaan

--- a/Produk/produk.html
+++ b/Produk/produk.html
@@ -14,7 +14,7 @@
             </div>
             <ul>
                 <li><a href="../index.html">Home</a></li> 
-                <li><a href="">Prusahaan</a></li>
+                <li><a href="../perusahaan/perusahaan.html">Prusahaan</a></li>
                 <li><a href="produk.html">Produk</a></li>
                 <li><a href="">Kontak</a></li>
             </ul>
@@ -24,7 +24,7 @@
     <section class="hero-produk">
     	<div class="container-produk">
     		<h2>Produk Kami</h2>
-
+    		<p>CUP</p>
 	    	<div class="gambar-produk">
 	    		<div class="col">
 	    			<img width="100px" src="../img/minum1.png">
@@ -64,6 +64,8 @@
 	    		</div>
 	    	</div>
 
+
+	    	<p>BOTOL</p>
 	    	<div class="gambar-produk">
 	    		<div class="col">
 	    			<img width="100px" src="../img/minum1.png">
@@ -103,6 +105,7 @@
 	    		</div>
 	    	</div>
 
+	    	<p>LITERAN</p>
 	    	<div class="gambar-produk">
 	    		<div class="col">
 	    			<img width="100px" src="../img/minum1.png">
