--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li> 
-                <li><a href="">Prusahaan</a></li>
+                <li><a href="perusahaan/perusahaan.html">Prusahaan</a></li>
                 <li><a href="produk/produk.html">Produk</a></li>
                 <li><a href="">Kontak</a></li>
             </ul>
