--- a/produk.html
+++ b/produk.html
@@ -4,17 +4,17 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>produk</title>
-	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<header>
         <nav>
             <div class="logo">
-                <img src="../img/logo.png">
+                <img src="img/logo.png">
             </div>
             <ul>
-                <li><a href="../index.html">Home</a></li> 
-                <li><a href="../perusahaan/perusahaan.html">Prusahaan</a></li>
+                <li><a href="index.html">Home</a></li> 
+                <li><a href="perusahaan.html">Prusahaan</a></li>
                 <li><a href="produk.html">Produk</a></li>
                 <li><a href="">Kontak</a></li>
             </ul>
@@ -27,37 +27,37 @@
     		<p>CUP</p>
 	    	<div class="gambar-produk">
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="img/minum1.png">
 	    			<div class="text">
                         <p class="title">Original</p>
                     </div>
 	    		</div>
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="img/minum1.png">
 	    			<div class="text">
                         <p class="title">Vanila</p>
                     </div>
 	    		</div>
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="img/minum1.png">
 	    			<div class="text">
                         <p class="title">Coklat</p>
                     </div>
 	    		</div>
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="img/minum1.png">
 	    			<div class="text">
                         <p class="title">Strobery</p>
                     </div>
 	    		</div>
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="img/minum1.png">
 	    			<div class="text">
                         <p class="title">Melon</p>
                     </div>
 	    		</div>
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="img/minum1.png">
 	    			<div class="text">
                         <p class="title">Taro</p>
                     </div>
@@ -68,37 +68,37 @@
 	    	<p>BOTOL</p>
 	    	<div class="gambar-produk">
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="img/minum1.png">
 	    			<div class="text">
                         <p class="title">Original</p>
                     </div>
 	    		</div>
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="img/minum1.png">
 	    			<div class="text">
                         <p class="title">Vanila</p>
                     </div>
 	    		</div>
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="img/minum1.png">
 	    			<div class="text">
                         <p class="title">Coklat</p>
                     </div>
 	    		</div>
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="img/minum1.png">
 	    			<div class="text">
                         <p class="title">Strobery</p>
                     </div>
 	    		</div>
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="img/minum1.png">
 	    			<div class="text">
                         <p class="title">Melon</p>
                     </div>
 	    		</div>
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="img/minum1.png">
 	    			<div class="text">
                         <p class="title">Taro</p>
                     </div>
@@ -108,7 +108,7 @@
 	    	<p>LITERAN</p>
 	    	<div class="gambar-produk">
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="img/minum1.png">
 	    			<div class="text">
                         <p class="title">Original</p>
                     </div>
