--- a/index.html
+++ b/index.html
@@ -40,26 +40,26 @@
             <div class="prodak">
 
                 <div class="tabel">
-                    <img width="200px" src="img/minum1.png"> `
+                    <img width="200px" src="img/cup.jpeg"> `
                     <div class="text">
-                        <p class="title">Susu Cup</p>
-                        <p class="harga">6K</p>
+                        <p class="title">Susu Cup kecil/besar</p>
+                        <p class="harga">4K/8K</p>
                     </div>
                 </div> 
             
                 <div class="tabel">
-                    <img width="200px" src="img/minum1.png"> `
+                    <img width="200px" src="img/botol.jpg"> `
                     <div class="text">
                         <p class="title">Susu Botol</p>
-                        <p class="harga">6K</p>
+                        <p class="harga">10K</p>
                     </div>
                 </div>
                
                 <div class="tabel">
-                    <img width="200px" src="img/minum1.png"> `
+                    <img width="200px" src="img/literan.jpeg"> `
                     <div class="text">
-                        <p class="title">Susu Literan</p>
-                        <p class="harga">6K</p>
+                        <p class="title">Susu Literan Mentah/Ori</p>
+                        <p class="harga">12K/18K</p>
                     </div>
                 </div>
 
@@ -67,7 +67,7 @@
         </div>
     </section>
 
-    <footer>Created Whit Love by @Jalaludin Ahmadi</footer>
+    <footer>Created Whit Love by <a href="https://www.instagram.com/jalalldinn/">@Jalaludin Ahmadi</a></footer>
 
 
 </body>
