--- a/perusahaan/index.html
+++ b/perusahaan/index.html
@@ -16,7 +16,7 @@
                 <li><a href="../index.html">Home</a></li> 
                 <li><a href="../perusahaan/index.html">Prusahaan</a></li>
                 <li><a href="../produk/index.html">Produk</a></li>
-                <li><a href="">Kontak</a></li>
+                <li><a href="../kontak/index.html">Kontak</a></li>
             </ul>
         </nav>
     </header>
@@ -53,11 +53,14 @@
                 <div class="isi-text">
                     <p>Kec. Kembang, Kabupaten Jepara,Jawa Tengah</p>
                 </div>
-                <iframe width="450px" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d33666.42984231806!2d110.78577222187656!3d-6.50286028534447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7123631fb27c4d%3A0xef5bb112f86f88c!2sSagawe%2C%20Jinggotan%2C%20Kec.%20Kembang%2C%20Kabupaten%20Jepara%2C%20Jawa%20Tengah!5e0!3m2!1sid!2sid!4v1653726745682!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe width="420px" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d33666.42984231806!2d110.78577222187656!3d-6.50286028534447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7123631fb27c4d%3A0xef5bb112f86f88c!2sSagawe%2C%20Jinggotan%2C%20Kec.%20Kembang%2C%20Kabupaten%20Jepara%2C%20Jawa%20Tengah!5e0!3m2!1sid!2sid!4v1653726745682!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <img width="250px" src="../img/visimisi_photo.png">
              </div>
         </div>
     </section>
+
+    <footer>Created Whit Love by <a href="https://www.instagram.com/jalalldinn/">@Jalaludin Ahmadi</a></footer>
+
 
 
 </body>
