--- a/produk/index.html
+++ b/produk/index.html
@@ -16,7 +16,7 @@
                 <li><a href="../index.html">Home</a></li> 
                 <li><a href="../perusahaan/index.html">Prusahaan</a></li>
                 <li><a href="../produk/index.html">Produk</a></li>
-                <li><a href="">Kontak</a></li>
+                <li><a href="../kontak/index.html">Kontak</a></li>
             </ul>
         </nav>
     </header>
@@ -116,6 +116,9 @@
 	    	</div>
     	</div>
     </section>
+
+	<footer>Created Whit Love by <a href="https://www.instagram.com/jalalldinn/">@Jalaludin Ahmadi</a></footer>
+
 	
 </body>
 </html>
