--- a/kontak/index.html
+++ b/kontak/index.html
@@ -30,16 +30,24 @@
                     </div>
                     <div class="col">
                         <img src="../img/instagram.png" alt="">
+                        <a href="https://www.instagram.com/drip_milky/">DripMilk</a>
                     </div>
                     <div class="col">
                         <img src="../img/github.png" alt="">
+                        <a href="https://github.com/jalal177">Jalaludin Ahmadi</a>
                     </div>
+                </div>
+                <div class="banner">
+                    <img src="../img/banner1.jpeg" alt="">
+                    <img src="../img/banner2.jpeg" alt="">
                 </div>
                 <div class="kontak-img">
 
                 </div>
             </div>
         </section>
+
+        <footer>Created Whit Love by <a href="https://www.instagram.com/jalalldinn/">@Jalaludin Ahmadi</a></footer>
 
     </body>
 </html>
