--- a/kontak/index.html
+++ b/kontak/index.html
@@ -3,22 +3,35 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>drip milk</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
         <link rel="stylesheet" type="text/css" href="../style.css">
     </head>
     <body>
-        <header>
-            <nav>
-                <div class="logo">
-                    <img src="../img/logo.png">
-                </div>
-                <ul>
-                    <li><a href="../index.html">Home</a></li> 
-                    <li><a href="../perusahaan/index.html">Prusahaan</a></li>
-                    <li><a href="../produk/index.html">Produk</a></li>
-                    <li><a href="index.html">Kontak</a></li>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">DripMilk</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="../index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../perusahaan/index.html">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../produk/index.html">Pricing</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link active" href="index.html" tabindex="-1" aria-disabled="true">Disabled</a>
+                  </li>
                 </ul>
-            </nav>
-        </header>
+              </div>
+            </div>
+          </nav>
 
         <section>
             <div class="container">
@@ -48,6 +61,7 @@
         </section>
 
         <footer>Created Whit Love by <a href="https://www.instagram.com/jalalldinn/">@Jalaludin Ahmadi</a></footer>
-
+      
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
