--- a/perusahaan/index.html
+++ b/perusahaan/index.html
@@ -4,22 +4,35 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 	<link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
-	<header>
-        <nav>
-            <div class="logo">
-                <img src="../img/logo.png">
-            </div>
-            <ul>
-                <li><a href="../index.html">Home</a></li> 
-                <li><a href="../perusahaan/index.html">Prusahaan</a></li>
-                <li><a href="../produk/index.html">Produk</a></li>
-                <li><a href="../kontak/index.html">Kontak</a></li>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">DripMilk</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link " aria-current="page" href="../index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="index.html">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../produk/index.html">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../kontak/index.html" tabindex="-1" aria-disabled="true">Disabled</a>
+              </li>
             </ul>
-        </nav>
-    </header>
+          </div>
+        </div>
+      </nav>
 
     <section>
         <div class="hero-perusahaan">
@@ -37,7 +50,7 @@
                         <h3>Kutipan dari Jalaludin Ahmadi Pendiri Dripmilk</h3>
                         <p>"Saya hanya ingin membuat produk makanan dan minuman yang saya percaya itu bagus dikonsumsi oleh keluarga saya."</p>
                     </div>
-                    <img width="250px" src="../img/visimisi_photo.png">
+                    <img width="250px" src="../img/profile.png">
                 </div>
     		</div>
     	</div>
@@ -54,13 +67,14 @@
                     <p>Kec. Kembang, Kabupaten Jepara,Jawa Tengah</p>
                 </div>
                 <iframe width="420px" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d33666.42984231806!2d110.78577222187656!3d-6.50286028534447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7123631fb27c4d%3A0xef5bb112f86f88c!2sSagawe%2C%20Jinggotan%2C%20Kec.%20Kembang%2C%20Kabupaten%20Jepara%2C%20Jawa%20Tengah!5e0!3m2!1sid!2sid!4v1653726745682!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <img width="250px" src="../img/visimisi_photo.png">
+                <img width="250px" src="../img/profile.png">
              </div>
         </div>
     </section>
 
     <footer>Created Whit Love by <a href="https://www.instagram.com/jalalldinn/">@Jalaludin Ahmadi</a></footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 
 </body>
