--- a/kontak/index.html
+++ b/kontak/index.html
@@ -15,18 +15,18 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="../index.html">Home</a>
+                    <a class="nav-link " aria-current="page" href="../index.html">Rumah</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../perusahaan/index.html">Features</a>
+                    <a class="nav-link" href="../perusahaan/index.html">Perusahaan</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../produk/index.html">Pricing</a>
+                    <a class="nav-link" href="../produk/index.html">Produk</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="index.html" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <a class="nav-link active" href="index.html">Kontak</a>
                   </li>
                 </ul>
               </div>
