--- a/perusahaan/index.html
+++ b/perusahaan/index.html
@@ -16,18 +16,18 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link " aria-current="page" href="../index.html">Home</a>
+                <a class="nav-link " aria-current="page" href="../index.html">Rumah</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="index.html">Features</a>
+                <a class="nav-link active" href="index.html">Perusahaan</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../produk/index.html">Pricing</a>
+                <a class="nav-link" href="../produk/index.html">Produk</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="../kontak/index.html" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="../kontak/index.html">Kontak</a>
               </li>
             </ul>
           </div>
@@ -47,7 +47,7 @@
 	    		</div>
                 <div class="isi">
                     <div class="isi-text">
-                        <h3>Kutipan dari Jalaludin Ahmadi Pendiri Dripmilk</h3>
+                        <h3>Kutipan Jalaludin Ahmadi dari Pendiri Dripmilk</h3>
                         <p>"Saya hanya ingin membuat produk makanan dan minuman yang saya percaya itu bagus dikonsumsi oleh keluarga saya."</p>
                     </div>
                     <img width="250px" src="../img/profile.png">
@@ -64,10 +64,10 @@
              </div>
              <div class="isi">
                 <div class="isi-text">
-                    <p>Kec. Kembang, Kabupaten Jepara,Jawa Tengah</p>
+                    <p>Kec. Kembang, Kabupaten Jepara,Jawa Tengah <strong>depan Kantor Kecamatan.</strong></p>
                 </div>
                 <iframe width="420px" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d33666.42984231806!2d110.78577222187656!3d-6.50286028534447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7123631fb27c4d%3A0xef5bb112f86f88c!2sSagawe%2C%20Jinggotan%2C%20Kec.%20Kembang%2C%20Kabupaten%20Jepara%2C%20Jawa%20Tengah!5e0!3m2!1sid!2sid!4v1653726745682!5m2!1sid!2sid" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <img width="250px" src="../img/profile.png">
+                <img width="250px" src="../img/cabang.png">
              </div>
         </div>
     </section>
