--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ms-auto">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Rumah</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="perusahaan/index.html">Features</a>
+                <a class="nav-link" href="perusahaan/index.html">Perusahaan</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="produk/index.html">Pricing</a>
+                <a class="nav-link" href="produk/index.html">Produk</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="kontak/index.html" tabindex="-1" aria-disabled="true">Disabled</a>
+                <a class="nav-link" href="kontak/index.html">Kontak</a>
               </li>
             </ul>
           </div>
@@ -58,7 +58,7 @@
     <section>
         <div class="brand"> 
             <h2>Produk Kami</h2>
-            <p>Drip Milk terbuat dari susu segar premium, diproses dan dikemas secara higienis menggunakan teknologi modern. Ini memiliki banyak pilihan rasa, dan sangat bergizi untuk Anda!</p>
+            <p>Drip Milk terbuat dari susu segar premium, diproses dan dikemas secara higienis menggunakan alat yang sesuai standar. Memiliki banyak pilihan rasa, dan sangat bergizi untuk Anda!</p>
         </div>
     </section>
 
