--- a/produk/index.html
+++ b/produk/index.html
@@ -81,37 +81,37 @@
 	    	<p>BOTOL</p>
 	    	<div class="gambar-produk">
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="../img/botol1.png">
 	    			<div class="text">
                         <p class="title">Original</p>
                     </div>
 	    		</div>
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="../img/botol1.png">
 	    			<div class="text">
                         <p class="title">Vanila</p>
                     </div>
 	    		</div>
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="../img/botol1.png">
 	    			<div class="text">
                         <p class="title">Coklat</p>
                     </div>
 	    		</div>
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="../img/botol1.png">
 	    			<div class="text">
                         <p class="title">Strobery</p>
                     </div>
 	    		</div>
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="../img/botol1.png">
 	    			<div class="text">
                         <p class="title">Melon</p>
                     </div>
 	    		</div>
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="../img/botol1.png">
 	    			<div class="text">
                         <p class="title">Taro</p>
                     </div>
@@ -121,7 +121,7 @@
 	    	<p>LITERAN</p>
 	    	<div class="gambar-produk">
 	    		<div class="col">
-	    			<img width="100px" src="../img/minum1.png">
+	    			<img width="100px" src="../img/literan.jpeg">
 	    			<div class="text">
                         <p class="title">Original</p>
                     </div>
