--- a/kontak/index.html
+++ b/kontak/index.html
@@ -39,7 +39,7 @@
                 <div class="kontak">
                     <div class="col">
                         <img src="../img/whatsapp.png" alt="">
-                        <p>No: 0888 0289 2593</p>
+                        <p>No: 0888 0289 2593 atau 081 909 385 378</p>
                     </div>
                     <div class="col">
                         <img src="../img/instagram.png" alt="">
@@ -60,7 +60,7 @@
             </div>
         </section>
 
-        <footer>Created Whit Love by <a href="https://www.instagram.com/jalalldinn/">@Jalaludin Ahmadi</a></footer>
+        <footer>Created Whit Love by <a href="https://www.instagram.com/jalalldinn/">Jalaludin Ahmadi</a></footer>
       
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
